--- a/package.json
+++ b/package.json
@@ -37,16 +37,25 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@tiptap/extension-color": "^2.10.2",
+    "@tiptap/extension-font-family": "^2.10.2",
+    "@tiptap/extension-heading": "^2.10.2",
+    "@tiptap/extension-highlight": "^2.10.2",
     "@tiptap/extension-image": "^2.10.2",
+    "@tiptap/extension-link": "^2.10.2",
     "@tiptap/extension-table": "^2.11.7",
     "@tiptap/extension-table-cell": "^2.10.2",
     "@tiptap/extension-table-header": "^2.10.2",
     "@tiptap/extension-table-row": "^2.10.2",
     "@tiptap/extension-task-item": "^2.10.2",
     "@tiptap/extension-task-list": "^2.10.2",
+    "@tiptap/extension-text-align": "^2.10.2",
+    "@tiptap/extension-text-style": "^2.10.2",
+    "@tiptap/extension-underline": "^2.10.2",
     "@tiptap/pm": "^2.10.2",
     "@tiptap/react": "^2.10.2",
     "@tiptap/starter-kit": "^2.10.2",
+    "@types/react-color": "^3.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -58,6 +67,7 @@
     "next": "15.0.3",
     "next-themes": "^0.4.6",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-color": "^2.19.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.55.0",
@@ -68,7 +78,8 @@
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-resize-image": "^1.2.1",
     "vaul": "^1.1.2",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
